k8s/crud-deployment.yaml
# crud-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: crud-service
  namespace: my-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: crud-service
  template:
    metadata:
      labels:
        app: crud-service
    spec:
      containers:
      - name: crud-service
        image: crud-service:latest
        ports:
        - containerPort: 50052
---
apiVersion: v1
kind: Service
metadata:
  name: crud-service
  namespace: my-app
spec:
  selector:
    app: crud-service
  ports:
    - protocol: TCP
      port: 50052
      targetPort: 50052
  type: ClusterIP
